--- a/tmall-web/src/main/resources/application.properties
+++ b/tmall-web/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.password=123456
 
 mybatis.mapper-locations=classpath:mappings/*.xml
 mybatis.type-aliases-package=com.hx.tmall.entity
+
+spring.devtools.livereload.enabled=true
