--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>tmall-dao</module>
         <module>tmall-service</module>
         <module>tmall-web</module>
+        <module>tmall-util</module>
     </modules>
 
     <properties>
@@ -55,10 +56,28 @@
            </dependency>
 
            <dependency>
+               <groupId>com.hx.tmall</groupId>
+               <artifactId>tmall-util</artifactId>
+               <version>0.0.1-SNAPSHOT</version>
+           </dependency>
+
+           <dependency>
                <groupId>org.mybatis.spring.boot</groupId>
                <artifactId>mybatis-spring-boot-starter</artifactId>
                <version>${mybatis.version}</version>
            </dependency>
+
+           <dependency>
+               <groupId>net.dreamlu</groupId>
+               <artifactId>spring-boot-starter-weixin</artifactId>
+               <version>1.3.6</version>
+           </dependency>
+
+           <!--<dependency>
+               <groupId>com.github.binarywang</groupId>
+               <artifactId>weixin-java-mp</artifactId>
+               <version>2.9.0</version>
+           </dependency>-->
        </dependencies>
    </dependencyManagement>
 
