--- a/tmall-web/pom.xml
+++ b/tmall-web/pom.xml
@@ -8,11 +8,11 @@
         <artifactId>tmall-parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <groupId>com.hx.tmall</groupId>
-    <artifactId>tmall-web</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
-    <name>tmall-web</name>
+        <groupId>com.hx.tmall</groupId>
+        <artifactId>tmall-web</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+        <packaging>jar</packaging>
+        <name>tmall-web</name>
 
     <properties>
         <java.version>1.8</java.version>
@@ -24,8 +24,17 @@
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
             <groupId>com.hx.tmall</groupId>
             <artifactId>tmall-service</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.hx.tmall</groupId>
+            <artifactId>tmall-util</artifactId>
         </dependency>
     </dependencies>
 
