--- a/pom.xml
+++ b/pom.xml
@@ -73,11 +73,24 @@
                <version>1.3.6</version>
            </dependency>
 
-           <!--<dependency>
+           <dependency>
+               <groupId>com.sdk4j</groupId>
+               <artifactId>sdk4j</artifactId>
+               <version>1.0</version>
+           </dependency>
+
+           <!-- xstream -->
+           <dependency>
+               <groupId>com.thoughtworks.xstream</groupId>
+               <artifactId>xstream</artifactId>
+               <version>1.4.11.1</version>
+           </dependency>
+
+           <dependency>
                <groupId>com.github.binarywang</groupId>
                <artifactId>weixin-java-mp</artifactId>
-               <version>2.9.0</version>
-           </dependency>-->
+               <version>3.5.0</version>
+           </dependency>
        </dependencies>
    </dependencyManagement>
 
