--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     <properties>
         <java.version>1.8</java.version>
         <mybatis.version>1.3.2</mybatis.version>
+        <weixin-java-mp.version>3.5.0</weixin-java-mp.version>
     </properties>
 
    <dependencyManagement>
@@ -68,29 +69,17 @@
            </dependency>
 
            <dependency>
-               <groupId>net.dreamlu</groupId>
-               <artifactId>spring-boot-starter-weixin</artifactId>
-               <version>1.3.6</version>
-           </dependency>
-
-           <dependency>
-               <groupId>com.sdk4j</groupId>
-               <artifactId>sdk4j</artifactId>
-               <version>1.0</version>
+               <groupId>com.github.binarywang</groupId>
+               <artifactId>weixin-java-mp</artifactId>
+               <version>${weixin-java-mp.version}</version>
            </dependency>
 
            <!-- xstream -->
-           <dependency>
+           <!--<dependency>
                <groupId>com.thoughtworks.xstream</groupId>
                <artifactId>xstream</artifactId>
                <version>1.4.11.1</version>
-           </dependency>
-
-           <dependency>
-               <groupId>com.github.binarywang</groupId>
-               <artifactId>weixin-java-mp</artifactId>
-               <version>3.5.0</version>
-           </dependency>
+           </dependency>-->
        </dependencies>
    </dependencyManagement>
 
