--- a/tmall-weixin-web/src/main/resources/application.yml
+++ b/tmall-weixin-web/src/main/resources/application.yml
@@ -7,8 +7,12 @@ logging:
     me.chanjar.weixin: DEBUG
 wx:
   mp:
-    configs: # обцФ©иртеДжц╤Ю╦Жн╒пе╧╚жз╨е
+    configs: # О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ц╤О©╫О©╫н╒О©╫е╧О©╫О©╫з╨О©╫
       - appId: wxb347ba7a5f0961e4
         secret: 297a538ba6aa050003a589083d958acb
         token: jky1988
+        aesKey:
+      - appId: wxa4522b09744396d0
+        secret: de79328394a5130168f0436710317db6
+        token: hmall
         aesKey:
