--- a/tmall-weixin-web/pom.xml
+++ b/tmall-weixin-web/pom.xml
@@ -47,6 +47,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.ikasoa</groupId>
+            <artifactId>spring-social-wechat</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
