--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,10 @@
         <java.version>1.8</java.version>
         <mybatis.version>1.3.2</mybatis.version>
         <weixin-java-mp.version>3.5.0</weixin-java-mp.version>
+        <zkclient.version>0.10</zkclient.version>
+        <zookeeper.version>3.4.9</zookeeper.version>
+        <spring-boot-starter-dubbo.version>1.1.1</spring-boot-starter-dubbo.version>
+
     </properties>
 
    <dependencyManagement>
@@ -80,6 +84,49 @@
                <artifactId>xstream</artifactId>
                <version>1.4.11.1</version>
            </dependency>-->
+
+           <!-- Dubbo -->
+           <!--<dependency>
+               <groupId>com.gitee.reger</groupId>
+               <artifactId>spring-boot-starter-dubbo</artifactId>
+               <version>${spring-boot-starter-dubbo.version}</version>
+           </dependency>-->
+           <!-- ZK -->
+           <!--<dependency>
+               <groupId>org.apache.zookeeper</groupId>
+               <artifactId>zookeeper</artifactId>
+               <version>${zookeeper.version}</version>
+               <exclusions>
+                   <exclusion>
+                       <groupId>org.slf4j</groupId>
+                       <artifactId>slf4j-log4j12</artifactId>
+                   </exclusion>
+                   <exclusion>
+                       <groupId>log4j</groupId>
+                       <artifactId>log4j</artifactId>
+                   </exclusion>
+               </exclusions>
+           </dependency>-->
+
+           <dependency>
+               <groupId>com.101tec</groupId>
+               <artifactId>zkclient</artifactId>
+               <version>${zkclient.version}</version>
+               <exclusions>
+                   <exclusion>
+                       <artifactId>slf4j-api</artifactId>
+                       <groupId>org.slf4j</groupId>
+                   </exclusion>
+                   <exclusion>
+                       <artifactId>log4j</artifactId>
+                       <groupId>log4j</groupId>
+                   </exclusion>
+                   <exclusion>
+                       <artifactId>slf4j-log4j12</artifactId>
+                       <groupId>org.slf4j</groupId>
+                   </exclusion>
+               </exclusions>
+           </dependency>
        </dependencies>
    </dependencyManagement>
 
