--- a/tmall-user-service/pom.xml
+++ b/tmall-user-service/pom.xml
@@ -9,10 +9,10 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <groupId>com.hx.tmall</groupId>
-    <artifactId>tmall-web</artifactId>
+    <artifactId>tmall-user-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>tmall-web</name>
+    <name>tmall-user-service</name>
 
     <properties>
         <java.version>1.8</java.version>
@@ -25,25 +25,42 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
+        <!--dubbo-springboot-->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <optional>true</optional>
+            <groupId>com.alibaba.boot</groupId>
+            <artifactId>dubbo-spring-boot-starter</artifactId>
+            <version>${dubbo.starter.version}</version>
         </dependency>
+
+        <!--dubbo-->
         <dependency>
-            <groupId>com.hx.tmall</groupId>
-            <artifactId>tmall-service</artifactId>
+            <groupId>com.alibaba</groupId>
+            <artifactId>dubbo</artifactId>
+            <version>${dubbo.version}</version>
         </dependency>
+
+        <!--curator相关，操作zookeeper-->
         <dependency>
-            <groupId>com.hx.tmall</groupId>
-            <artifactId>tmall-util</artifactId>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-framework</artifactId>
+            <version>${curator-framework.version}</version>
         </dependency>
-        <!--<dependency>
-            <groupId>net.dreamlu</groupId>
-            <artifactId>spring-boot-starter-weixin</artifactId>
-        </dependency>-->
+
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-recipes</artifactId>
+            <version>${curator-framework.version}</version>
+        </dependency>
+
+        <!--zookeeper-->
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>${zookeeper.version}</version>
+        </dependency>
 
         <!--<dependency>-->
             <!--<groupId>com.gitee.reger</groupId>-->
@@ -86,40 +103,35 @@
                 <!--</exclusion>-->
             <!--</exclusions>-->
         <!--</dependency>-->
-        <!--dubbo-springboot-->
-        <!--dubbo-springboot-->
-        <dependency>
-            <groupId>com.alibaba.boot</groupId>
-            <artifactId>dubbo-spring-boot-starter</artifactId>
-            <version>${dubbo.starter.version}</version>
-        </dependency>
 
-        <!--dubbo-->
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>dubbo</artifactId>
-            <version>${dubbo.version}</version>
-        </dependency>
 
-        <!--curator相关，操作zookeeper-->
         <dependency>
-            <groupId>org.apache.curator</groupId>
-            <artifactId>curator-framework</artifactId>
-            <version>${curator-framework.version}</version>
+            <groupId>com.hx.tmall</groupId>
+            <artifactId>tmall-entity</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>org.apache.curator</groupId>
-            <artifactId>curator-recipes</artifactId>
-            <version>${curator-framework.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
         </dependency>
-
-        <!--zookeeper-->
         <dependency>
-            <groupId>org.apache.zookeeper</groupId>
-            <artifactId>zookeeper</artifactId>
-            <version>${zookeeper.version}</version>
+            <groupId>com.hx.tmall</groupId>
+            <artifactId>tmall-dao</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.hx.tmall</groupId>
+            <artifactId>tmall-service</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
